RESOLVED FIXED85543
Heap::reportAbandonedObjectGraph should not hasten an allocation-triggered collection
https://bugs.webkit.org/show_bug.cgi?id=85543
Summary Heap::reportAbandonedObjectGraph should not hasten an allocation-triggered co...
Mark Hahnenberg
Reported 2012-05-03 14:16:48 PDT
Currently reportAbandonedObjectGraph causes the Heap to think it is closer to its allocation limit for the current cycle, thus hastening an allocation-triggered collection. In reality, it should just affect the opportunistic GC timer. We should track the bytes we think have been abandoned and the bytes that have been allocated separately.
Attachments
Patch (4.11 KB, patch)
2012-05-03 14:52 PDT, Mark Hahnenberg
fpizlo: review+
Mark Hahnenberg
Comment 1 2012-05-03 14:52:32 PDT
Mark Hahnenberg
Comment 2 2012-05-03 15:30:57 PDT
Mark Hahnenberg
Comment 3 2012-05-03 15:37:18 PDT
Geoffrey Garen
Comment 4 2012-05-08 09:25:38 PDT
Comment on attachment 140098 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=140098&action=review > Source/JavaScriptCore/heap/Heap.cpp:795 > + m_bytesAbandoned = 0; Why do you only reset m_bytesAbandoned to 0 during a forced sweep? Even without a forced sweep, a normal GC, followed by allocation, will reclaim / recycle abandoned bytes.
Note You need to log in before you can comment on or make changes to this bug.