Heap::reportAbandonedObjectGraph should not hasten an allocation-triggered collection https://bugs.webkit.org/show_bug.cgi?id=85543

Reviewed by Filip Pizlo.

Currently reportAbandonedObjectGraph causes the Heap to think it is closer to its
allocation limit for the current cycle, thus hastening an allocation-triggered collection.
In reality, it should just affect the opportunistic GC timer. We should track the bytes
we think have been abandoned and the bytes that have been allocated separately.

* heap/Heap.cpp: Added a new field m_abandonedBytes to Heap to keep track of how much
we think we've abandoned.
(JSC::Heap::Heap):
(JSC::Heap::reportAbandonedObjectGraph):
(JSC):
(JSC::Heap::didAbandon): Added this function for reportAbandonedObjectGraph to call
rather than didAllocate. Works the same as didAllocate, but modifies bytes abandoned rather
than bytes allocated. Also notifies the timer, summing the two values together.
(JSC::Heap::collect):
(JSC::Heap::didAllocate): Now adds the bytes allocated and bytes abandoned when reporting
to GCActivityCallback.
* heap/Heap.h:
(Heap):


Canonical link: https://commits.webkit.org/103098@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116025 268f45cc-cd09-0410-ab3c-d52691b4dbfc